--- a/tpo_servidor/src/hibernate.properties
+++ b/tpo_servidor/src/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
-hibernate.connection.url jdbc:jtds:sqlserver://PLC-PC
+hibernate.connection.url jdbc:jtds:sqlserver://127.0.0.1/tpoad
 hibernate.connection.username loginTpo
 hibernate.connection.password loginTpo
 hibernate.connection.pool_size 2
