Se verifica el limite de credito antes de dar de alta un pedido

--- a/tpo_servidor/.classpath
+++ b/tpo_servidor/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="src/lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="src/lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="src/lib/commons-logging-1.1.1.jar"/>
@@ -16,5 +15,6 @@
 	<classpathentry kind="lib" path="src/lib/slf4j-api-1.5.6.jar"/>
 	<classpathentry kind="lib" path="src/lib/slf4j-simple-1.5.6.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tpo_repositorio"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
