--- a/tpo_servidor/bin/.gitignore
+++ b/tpo_servidor/bin/.gitignore
@@ -1,1 +1,12 @@
+/base/
+/controladores/
+/entities/
+/hibernate.properties
+/hibernate/
+/lib/
+/negocio/
+/objetoRemoto/
+/persistencia/
+/servidor/
+/test/
 /web/
