--- a/tpo_servidor/src/hibernate.properties
+++ b/tpo_servidor/src/hibernate.properties
@@ -1,8 +1,8 @@
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
-hibernate.connection.url jdbc:jtds:sqlserver://127.0.0.1/tpo
-hibernate.connection.username loginTpo
-hibernate.connection.password loginTpo
+hibernate.connection.url jdbc:jtds:sqlserver://localhost/master
+hibernate.connection.username sa
+hibernate.connection.password tech1234
 hibernate.connection.pool_size 2
 hibernate.connection.autocommit true
 
