Se crean ordenes de compra (parcial o completa) al hacer un pedido

--- a/tpo_servidor/bin/.gitignore
+++ b/tpo_servidor/bin/.gitignore
@@ -1,10 +1,11 @@
-/negocio/
+/base/
+/hibernate.properties
+/lib/
 /controladores/
 /entities/
 /hibernate/
-/lib/
+/negocio/
 /objetoRemoto/
 /persistencia/
 /servidor/
 /test/
-/base/
