--- a/tpo_servidor/bin/hibernate.properties
+++ b/tpo_servidor/bin/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
-hibernate.connection.url jdbc:jtds:sqlserver://localhost/tpoad
+hibernate.connection.url jdbc:jtds:sqlserver://localhost/tpo
 hibernate.connection.username loginTpo
 hibernate.connection.password loginTpo
 hibernate.connection.pool_size 2
