--- a/tpo_servidor/bin/.gitignore
+++ b/tpo_servidor/bin/.gitignore
@@ -1,9 +1,13 @@
+/archivos/
+/base/
 /controladores/
 /entities/
+/hibernate.properties
 /hibernate/
+/lib/
 /negocio/
+/notastock.txt
 /objetoRemoto/
 /persistencia/
 /servidor/
 /test/
-/base/
